Fix GitHub Pages deployment paths for JS and images

--- a/final-product.html
+++ b/final-product.html
@@ -264,10 +264,10 @@
 <div id="main-container">
   <div id="button-container">
     <div class="himono">
-      <img src="../images/himono.png" alt="ひもの" id="button-himono">
+      <img src="./images/himono.png" alt="ひもの" id="button-himono">
     </div>
     <div class="sentaku">
-      <img src="../images/sentaku.png" alt="せんたく" id="button-sentaku">
+      <img src="./images/sentaku.png" alt="せんたく" id="button-sentaku">
     </div>
     <div id="weather-display">
       <div id="city-name"></div>
@@ -313,7 +313,7 @@
     <!-- ↑↑↑↑↑↑↑↑↑↑↑↑↑↑ ここから上に、ブラウザに表示したい内容を記述する ↑↑↑↑↑↑↑↑↑↑↑↑↑↑ -->
 
     <!-- ↓↓↓↓↓↓↓↓↓↓↓↓↓↓ 下の2行はHTMLとJavaScriptファイルを繋ぐ役割を果たしています ↓↓↓↓↓↓↓↓↓↓↓↓↓↓ -->
-    <script src="../js/jquery-3.7.1.min.js"></script>
+    <script src="./js/jquery-3.7.1.min.js"></script>
     <script src="./js/final-product.js"></script>
     <!-- ↓↓↓↓↓↓↓↓↓↓↓↓↓↓ 上の2行はHTMLとJavaScriptファイルを繋ぐ役割を果たしています ↓↓↓↓↓↓↓↓↓↓↓↓↓↓ -->
   </body>
